--- a/theme/mocha/peach.css
+++ b/theme/mocha/peach.css
@@ -166,7 +166,7 @@
   --ctp-mocha-mauve: #cba6f7;
   --ctp-mocha-red: #f38ba8;
   --ctp-mocha-maroon: #eba0ac;
-  --ctp-mocha-peach: #fab387;
+  --ctp-mocha-peach: #df6011;
   --ctp-mocha-yellow: #f9e2af;
   --ctp-mocha-green: #a6e3a1;
   --ctp-mocha-teal: #94e2d5;
